# fuze

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  docker-compose.yml.example  pyproject.toml
src/backend/: Dockerfile  entrypoint.sh  main.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 90918d82207e_initial.py  bfda0abe3a31_add_tracks.py  fdee927134bd_added_is_active.py
src/backend/core/: dependencies.py  exceptions.py  logger.py  modules.py  security.py  settings.py
src/backend/database/: bootstrap.py  dependencies.py  engine.py
src/backend/integrations/: cache.py  storage.py  yandex.py  youtube.py  yt_data.json
src/backend/modules/auth/: dependencies.py  module.py  router.py  schemas.py  service.py
src/backend/modules/tracks/: dependencies.py  models.py  module.py  repository.py  router.py  schemas.py  service.py
src/backend/modules/users/: dependencies.py  models.py  module.py  repository.py  router.py  schemas.py  service.py
src/cli/: config.py  main.py
src/cli/commands/: db.py  docker.py  env.py  module_manager.py  users.py
src/cli/templates/backend/: models.py.jinja  router.py.jinja
src/frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/app/auth/: page.tsx
src/frontend/app/player/: page.tsx
src/frontend/components/player/: ControlStrip.tsx  Controls.tsx  NowPlaying.tsx  Player.tsx  ProgressBar.tsx  Queue.tsx  VolumeControl.tsx
src/frontend/components/search/: SearchModal.tsx
src/frontend/components/sidebar/: Sidebar.tsx
src/frontend/lib/: api.ts  store.ts  types.ts
tests/: conftest.py  test_auth.py  test_health.py
