[project]
name = "Fuze"
version = "0.1.0"
description = "Self-hosted music streaming platform that unifies Spotify, YouTube Music, Yandex Music and other sources"
requires-python = ">=3.12"

dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "asyncyt==2.1.4",
    "authx==1.7.0",
    "fastapi>=0.136.1",
    "httpx==0.28.1",
    "jinja2>=3.1.0",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.4",
    "pytest==9.1.1",
    "pytest-asyncio>=1.4.0",
    "rich>=13.0.0",
    "ruff>=0.15.13",
    "sqlalchemy>=2.0.49",
    "typer>=0.25.1",
    "uvicorn>=0.47.0",
    "aioboto3>=12.0.0",
    "aiofiles>=24.0.0",
    "redis>=5.0.0",
    "yandex-music[async]>=3.0.0",
    "yt-dlp==2026.6.9",
]

[project.scripts]
project = "cli.main:app"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"